--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
       - '**.md'
 jobs:
   run:
+    name: go vet check
     strategy:
       matrix:
         go-version: [1.13.x, 1.14.x]
@@ -25,4 +26,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Go vet check
-        run: go test ./...
+       # run: go test ./...
+        run: |
+          ls && ls -l
