--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - '**.md'
 jobs:
   run:
-    name: go vet check
+    name: go style check
     strategy:
       matrix:
         go-version: [1.13.x, 1.14.x]
@@ -23,9 +23,18 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go-version }}
+      # This step checks out a copy of your repository.
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Go vet check
-       # run: go test ./...
         run: |
-          ls && ls -l
+          go vet ./...
+      - name: Gofmt check
+        run: |
+          diff=`find . -name "*.go" | xargs gofmt -s -d`
+          if [[ -n "${diff}" ]]; then
+               info "Gofmt check failed :"
+               info "${diff}"
+               info "Please run this command to fix: [find . -name "*.go" | xargs gofmt -s -w]"
+               exit 1
+          fi
